--- a/Zarith/dune
+++ b/Zarith/dune
@@ -1,15 +1,16 @@
 (library
   (name zarith)
   (public_name zarith)
+  (no_dynlink)
   (modules z q big_int_Z)
   (libraries gmp)
   (foreign_archives zarith_c)
   (wrapped false))
 
 (rule
- (targets libzarith_c%{ext_lib} dllzarith_c%{ext_dll})
+ (targets libzarith_c%{ext_lib})
  (deps   caml_z_arch.o caml_z.o)
- (action (run ocamlmklib -o zarith_c %{deps})))
+ (action (run ocamlmklib -custom -o zarith_c %{deps})))
 
 (executable
  (name z_pp)
