--- a/ocaml-gmp/dune
+++ b/ocaml-gmp/dune
@@ -1,9 +1,10 @@
 (library
  (public_name gmp)
- (install_c_headers gmp)
+ (install_c_headers src/gmp)
  (foreign_archives gmp))
 
-(rule
- (deps (source_tree src))
- (targets gmp.h libgmp.a)
- (action (run ./build.sh x86_64-unknown-none %{cc})))
+(subdir src
+ (rule
+   (deps (source_tree .))
+   (targets gmp.h libgmp.a)
+   (action (run ../build.sh x86_64-unknown-none %{cc}))))
