--- a/dune
+++ b/dune
@@ -52,12 +52,10 @@
   (deps main.exe.o libmirage-solo5_bindings.a solo5-hvt-ldflags freestanding-ldflags)
   (action
     (bash
-      "ld -verbose -nostdlib \
-         -L/home/samoht/git/wip-dune-workspace/_build/install/mirage-hvt/lib/ocaml-freestanding \
-         -I/home/samoht/git/wip-dune-workspace/_build/install/mirage-hvt/lib/ocaml-freestanding \
+      "ld -verbose \
          main.exe.o \
          $(cat $(realpath solo5-hvt-ldflags)) -o %{target} \
-         $(cat $(realpath freestanding-ldflags)) -lasmrun -lnolibc")))
+         $(cat $(realpath freestanding-ldflags))")))
 
 (rule (copy %{lib:solo5-hvt:cflags} solo5-hvt-cflags))
 
